# AWSConnector

./: .gitignore  .prettierignore  LICENSE  MANIFEST.in  README.md  install.json  install.sh  package-lock.json  package.json  pyproject.toml  setup.py  uninstall.sh  update_frontend.sh
.github/workflows/: build.yml
AWSConnector/: __init__.py  aws_connector.py
src/: index.ts
style/: base.css  index.css
